# Blueshift

./: .dockerignore  .env  .gitignore  CMakeLists.txt  README.md  bls  bls.bat  blueshift  blueshift.py  compose.yaml  omar.diff  print_string.blu  requirements.txt  signaler.diff
src/client/: CMakeLists.txt  main.cpp  testerMain.cpp
src/client/drivers/: CMakeLists.txt  Defaults.cpp
src/client/drivers/Linux/common/: AUDIO_PLAYER.cpp  FILE_LOG.cpp  GAMEPAD.cpp  HTTP_ENDPOINT.cpp  KEYBOARD.cpp  LINE_WRITER.cpp  MOUSE.cpp  READ_FILE.cpp  READ_FILE_POLL.cpp  TEXT_FILE.CPP  TEXT_FILE.cpp  TIMER_TEST.cpp
src/client/drivers/Linux/rpi64/: ACTIVE_BUZZER.cpp  BUTTON.cpp  DC_MOTOR.cpp  DHT11.cpp  FN_JOYSTICK.cpp  FN_SERVO.cpp  LCD_SCREEN.cpp  LIGHT.cpp  MOTION_SENSOR.cpp  MOTOR.cpp  PASSIVE_BUZZER.cpp  PHOTORESISTOR.cpp  POTENTIOMETER.cpp  PWM_LED.cpp  RGB_LED.cpp  STEP_MOTOR.cpp  THERMISTOR.cpp  ULTRASONIC.cpp
src/client/drivers/common/: AUDIO_PLAYER.cpp  GAMEPAD.cpp  KEYBOARD.cpp  LINE_WRITER.cpp  MOUSE.cpp  READ_FILE.cpp  READ_FILE_POLL.cpp  TEXT_FILE.cpp  TIMER_TEST.cpp
src/client/drivers/linux/rpi64/: ACTIVE_BUZZER.cpp  BUTTON.cpp  FN_JOYSTICK.cpp  LIGHT.cpp  MOTION_SENSOR.cpp  PASSIVE_BUZZER.cpp  PHOTORESISTOR.cpp
src/client/libCE/: CMakeLists.txt  Client.cpp  Client.hpp
src/client/libClient/: Client.hpp
src/client/libClientGateway/: CMakeLists.txt  ClientGateway.cpp  ClientGateway.hpp
src/client/libClientRouter/: CMakeLists.txt  ClientRouter.cpp  ClientRouter.hpp
src/client/libDevice/: ADC.hpp  CMakeLists.txt  DeviceCore.cpp  DeviceCore.hpp  DeviceUtil.cpp  DeviceUtil.hpp  Devices.cpp  Devices.hpp  FileWatcher.cpp  FileWatcher.hpp  HttpListener.hpp
src/client/libDevice/device_control/: device_control.cpp  device_control.hpp  device_cursor.cpp  device_cursor.hpp  device_interruptor.cpp  device_interruptor.hpp  device_poller.cpp  device_poller.hpp
src/client/libDevice/devtypes/: ACTIVE_BUZZER.hpp  AUDIO_PLAYER.hpp  BUTTON.hpp  DC_MOTOR.hpp  DHT11.hpp  FILE_LOG.hpp  FN_JOYSTICK.hpp  FN_SERVO.hpp  GAMEPAD.hpp  HTTP_ENDPOINT.hpp  KEYBOARD.hpp  LCD_SCREEN.hpp  LIGHT.hpp  LINE_WRITER.hpp  MOTION_SENSOR.hpp  MOUSE.hpp  PASSIVE_BUZZER.hpp  PHOTORESISTOR.hpp  POTENTIOMETER.hpp  PWM_LED.hpp  READ_FILE.hpp  READ_FILE_POLL.hpp  RGB_LED.hpp  STEP_MOTOR.hpp  TEXT_FILE.hpp  THERMISTOR.hpp  TIMER_TEST.hpp  ULTRASONIC.hpp
src/client/libDevice/drivers/include/: BUTTON.hpp  LIGHT.hpp  LINE_WRITER.hpp  MOTOR.hpp  (+2 more)
src/client/libDevice/filenotify/: FileNotify.cpp  FileNotify.hpp
src/client/libDevice/include/: ACTIVE_BUZZER.hpp  ADC.hpp  AUDIO_PLAYER.hpp  BUTTON.hpp  DC_MOTOR.hpp  DHT11.hpp  FILE_LOG.hpp  FN_JOYSTICK.hpp  FN_SERVO.hpp  GAMEPAD.hpp  HTTP_ENDPOINT.hpp  HttpListener.hpp  KEYBOARD.hpp  LCD_SCREEN.hpp  LIGHT.hpp  LINE_WRITER.hpp  MOTION_SENSOR.hpp  MOTOR.hpp  MOUSE.hpp  PASSIVE_BUZZER.hpp  PHOTORESISTOR.hpp  POTENTIOMETER.hpp  PWM_LED.hpp  READ_FILE.hpp  READ_FILE_POLL.hpp  RGB_LED.hpp  STEP_MOTOR.hpp  TEXT_FILE.hpp  THERMISTOR.hpp  TIMER_TEST.hpp  ULTRASONIC.hpp
src/client/libNetCommon/: Protocol.hpp
src/lang/: CMakeLists.txt  main.cpp
src/lang/common/: CMakeLists.txt  ast.cpp  ast.hpp  binding_parser.hpp  bls_types.cpp  bls_types.hpp  call_stack.hpp  dependency_graph.cpp  dependency_graph.hpp  error_types.hpp  heap_descriptor.hpp  print_visitor.cpp  print_visitor.hpp  symbolicator.cpp  symbolicator.hpp  token.hpp  visitor.hpp
src/lang/common/include/: NODE_TYPES.LIST  OPTIMIZER_TYPES.LIST  reserved_tokens.hpp  typedefs.hpp
src/lang/libOptimizer/: optimizer.cpp  optimizer.hpp
src/lang/libanalyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
src/lang/libbindmapper/: CMakeLists.txt  bindmapper.cpp  bindmapper.hpp
src/lang/libcompiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
src/lang/libdaggen/: CMakeLists.txt  daggen.cpp  daggen.hpp
src/lang/libdepgraph/: CMakeLists.txt  depgraph.cpp  depgraph.hpp
src/lang/libdivider/: CMakeLists.txt  divider.cpp  divider.hpp
src/lang/libexecution/: CMakeLists.txt  call_stack.hpp  error_types.hpp
src/lang/libgenerator/: CMakeLists.txt  generator.cpp  generator.hpp
src/lang/libinterpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp
src/lang/liblexer/: CMakeLists.txt  char_stream.cpp  char_stream.hpp  lexer.cpp  lexer.hpp  token.hpp
src/lang/liblexer/include/: token_definitions.hpp
src/lang/liboptimizer/: CMakeLists.txt  optimizer.cpp  optimizer.hpp
src/lang/libparser/: CMakeLists.txt  ast.cpp  ast.hpp  parser.cpp  parser.hpp  token_stream.cpp  token_stream.hpp  visitor.hpp
src/lang/libparser/include/: NODE_TYPES.LIST  reserved_tokens.hpp
src/lang/libsymgraph/: CMakeLists.txt  symbolicator.cpp  symbolicator.hpp  symgraph.cpp  symgraph.hpp
src/lang/libsyntax/: CMakeLists.txt  token.hpp  token_definitions.hpp
src/lang/libvirtual_machine/: CMakeLists.txt  virtual_machine.cpp  virtual_machine.hpp
src/lang/libvisitor/: CMakeLists.txt  ast.cpp  ast.hpp  printer.cpp  printer.hpp  printer.tpp  visitor.cpp  visitor.hpp  visitor.tpp
src/lang/libvisitor/include/: NODE_TYPES.LIST
src/master/: CMakeLists.txt  main.cpp
src/master/libByteproc/: BytecodeReader.hpp  Preprocessor.cpp  Preprocessor.hpp
src/master/libCommon/: Common.hpp
src/master/libDM/: DynamicMessage.cpp  DynamicMessage.hpp
src/master/libEM/: CMakeLists.txt  EM.cpp  EM.hpp
src/master/libMM/: CMakeLists.txt  MM.cpp  MM.hpp
src/master/libNM/: CMakeLists.txt  MasterNM.cpp  MasterNM.hpp
src/master/libNetCommon/: Connection.hpp
src/master/libScheduler/: scheduler.cpp  scheduler.hpp
src/master/libTSM/: TSM.hpp
src/master/libTSQ/: TSQ.cpp  TSQ.hpp
src/master/libTicker/: CMakeLists.txt  Ticker.cpp  Ticker.hpp
src/master/libVM/: HeapDescriptors.hpp  Instructions.cpp  Instructions.hpp  VariantOperator.cpp  VariantOperator.hpp  VirtualMachine.cpp  VirtualMachine.hpp
test/lang/e2e/: CMakeLists.txt  test_e2e.cpp
test/lang/e2e/fixtures/: e2e_test.hpp
test/lang/e2e/samples/: binary_operations.blu  branches_and_loops.blu  container_access.blu  print.blu  print_string.blu  procedure_calls.blu  short_circuit.blu
(+202 files in other folders)
